--- a/package.json
+++ b/package.json
@@ -2,17 +2,22 @@
   "name": "memory-match-api",
   "private": true,
   "version": "0.0.0",
+  "homepage": "https://carolinafuenzalida.github.io/memory-match-api/",
   "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "predeploy": "vite build",
+    "deploy": "gh-pages -d dist"
   },
   "dependencies": {
+    "gh-pages": "^5.0.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
-  },
-  "devDependencies": {
+    "react-dom": "^18.2.0",
+    "sweetalert2": "^11.7.1"
+   },
+    "devDependencies": {
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.9",
     "@vitejs/plugin-react": "^3.0.0",
