--- a/package.json
+++ b/package.json
@@ -2,14 +2,12 @@
   "name": "memory-match-api",
   "private": true,
   "version": "0.0.0",
-  "homepage": "https://carolinafuenzalida.github.io/memory-match-api/",
+  
   "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview",
-    "predeploy": "vite build",
-    "deploy": "gh-pages -d dist"
+    "preview": "vite preview"
   },
   "dependencies": {
     "gh-pages": "^5.0.0",
